--- a/discovery-server/src/main/resources/application.properties
+++ b/discovery-server/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=discovery-server
+
+server.port=9092
+
+eureka.client.registerWithEureka=false
+eureka.client.fetchRegistry=false
