--- a/config-server/src/main/resources/config-files/auth-server.properties
+++ b/config-server/src/main/resources/config-files/auth-server.properties
@@ -1,5 +1,7 @@
 server.port=9093
 
+jwt.secret=a-string-secret-at-least-256-bits-long-for-jwt-token-validation-in-gateway-server-application
+
 spring.datasource.url=jdbc:mysql://localhost:3306/auth_db
 spring.datasource.username=root
 spring.datasource.password=mysqladmin
