--- a/config-server/src/main/resources/config-files/gateway-server.properties
+++ b/config-server/src/main/resources/config-files/gateway-server.properties
@@ -2,25 +2,20 @@ server.port=9090
 
 spring.main.allow-bean-definition-overriding=true
 
-jwt.secret=mySecretKeyForJWTTokenValidationInGatewayServer
+jwt.secret=a-string-secret-at-least-256-bits-long-for-jwt-token-validation-in-gateway-server-application
 
-spring.cloud.gateway.server.webflux.routes[0].id=auth-service
+spring.cloud.gateway.server.webflux.routes[0].id=auth-public
 spring.cloud.gateway.server.webflux.routes[0].uri=lb://auth-server
-spring.cloud.gateway.server.webflux.routes[0].predicates[0]=Path=/auth/**
+spring.cloud.gateway.server.webflux.routes[0].predicates[0]=Path=/auth/register,/auth/login,/auth/validate
 
-spring.cloud.gateway.server.webflux.routes[1].id=products-service
-spring.cloud.gateway.server.webflux.routes[1].uri=lb://products-server
-spring.cloud.gateway.server.webflux.routes[1].predicates[0]=Path=/products/**
+spring.cloud.gateway.server.webflux.routes[1].id=auth-protected
+spring.cloud.gateway.server.webflux.routes[1].uri=lb://auth-server
+spring.cloud.gateway.server.webflux.routes[1].predicates[0]=Path=/auth/**
 
 spring.cloud.gateway.server.webflux.routes[2].id=auth-swagger
 spring.cloud.gateway.server.webflux.routes[2].uri=lb://auth-server
 spring.cloud.gateway.server.webflux.routes[2].predicates[0]=Path=/auth-docs/**
 spring.cloud.gateway.server.webflux.routes[2].filters[0]=RewritePath=/auth-docs/(?<segment>.*), /$\{segment}
-
-spring.cloud.gateway.server.webflux.routes[3].id=products-swagger
-spring.cloud.gateway.server.webflux.routes[3].uri=lb://products-server
-spring.cloud.gateway.server.webflux.routes[3].predicates[0]=Path=/products-docs/**
-spring.cloud.gateway.server.webflux.routes[3].filters[0]=RewritePath=/products-docs/(?<segment>.*), /$\{segment}
 
 eureka.client.service-url.defaultZone=http://localhost:9092/eureka
 eureka.instance.prefer-ip-address=true
