--- a/auth-server/src/main/resources/application.properties
+++ b/auth-server/src/main/resources/application.properties
@@ -1,22 +1,3 @@
 spring.application.name=auth-server
 
-# Disable Spring Cloud Config
-spring.cloud.config.enabled=false
-spring.cloud.config.import-check.enabled=false
-
-# MySQL Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/auth_db
-spring.datasource.username=root
-spring.datasource.password=mysqladmin
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-# JPA Configuration
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-
-# JWT Configuration
-jwt.secret=a-string-secret-at-least-256-bits-long-for-jwt-token-validation-in-gateway-server-application
-
-# Server Configuration
-server.port=9093
+spring.config.import=configserver:http://localhost:9091
