--- a/gateway-server/src/main/resources/application.properties
+++ b/gateway-server/src/main/resources/application.properties
@@ -1,3 +1,20 @@
 spring.application.name=gateway-server
+server.port=9090
 
 spring.config.import=configserver:http://localhost:9091
+
+# Eureka client configuration
+eureka.client.service-url.defaultZone=http://localhost:9092/eureka
+eureka.instance.prefer-ip-address=true
+
+# Gateway discovery configuration
+spring.cloud.gateway.discovery.locator.enabled=true
+spring.cloud.gateway.discovery.locator.lower-case-service-id=true
+
+# JWT configuration (fallback if config server is not available)
+jwt.secret=a-string-secret-at-least-256-bits-long-for-jwt-token-validation-in-gateway-server-application
+
+# Logging configuration
+logging.level.org.springframework.cloud.gateway=DEBUG
+logging.level.com.megamart.gateway_server=DEBUG
+logging.level.reactor.netty.http.server=DEBUG
