Add service & exception to auth-server

--- a/config-server/src/main/resources/config-files/auth-server.properties
+++ b/config-server/src/main/resources/config-files/auth-server.properties
@@ -11,3 +11,6 @@ spring.jpa.show-sql=true
 
 eureka.client.service-url.defaultZone=http://localhost:9092/eureka
 eureka.instance.prefer-ip-address=true
+
+springdoc.show-actuator=false
+springdoc.packages-to-scan=com.megamart.auth_server.controller
