Staged to test-1

--- a/config-server/src/main/resources/config-files/auth-server.properties
+++ b/config-server/src/main/resources/config-files/auth-server.properties
@@ -2,12 +2,15 @@ server.port=9093
 
 jwt.secret=a-string-secret-at-least-256-bits-long-for-jwt-token-validation-in-gateway-server-application
 
-spring.datasource.url=jdbc:mysql://localhost:3306/auth_db
+spring.datasource.url=jdbc:mysql://localhost:3306/megamart_auth_db?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=mysqladmin
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+# Spring Cloud Compatibility
+spring.cloud.compatibility-verifier.enabled=false
 
 eureka.client.service-url.defaultZone=http://localhost:9092/eureka
 eureka.instance.prefer-ip-address=true
