--- a/config-server/src/main/resources/config-files/gateway-server.properties
+++ b/config-server/src/main/resources/config-files/gateway-server.properties
@@ -6,6 +6,9 @@ jwt.secret=a-string-secret-at-least-256-bits-long-for-jwt-token-validation-in-ga
 
 # Routes are configured programmatically in GatewayConfig.java
 
+# Spring Cloud Compatibility
+spring.cloud.compatibility-verifier.enabled=false
+
 eureka.client.service-url.defaultZone=http://localhost:9092/eureka
 eureka.instance.prefer-ip-address=true
 
