--- a/cart-server/src/main/resources/application.properties
+++ b/cart-server/src/main/resources/application.properties
@@ -1,30 +1,2 @@
-spring.application.name=CartServer
-server.port=9097
-
-# MySQL datasource
-spring.datasource.url=jdbc:mysql://localhost:3306/megamart_cart?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
-spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.username=root
-spring.datasource.password=730524
-
-# JPA / Hibernate
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-
-# CORS Configuration
-spring.web.cors.allowed-origins=http://localhost:4200
-spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
-spring.web.cors.allowed-headers=*
-spring.web.cors.allow-credentials=true
-
-# Disable H2 console
-spring.h2.console.enabled=false
-
-# Disable external config/discovery for local runs
-spring.cloud.config.enabled=false
-spring.cloud.discovery.enabled=false
-
-# Springdoc tweaks
-springdoc.override-with-generic-response=false
-springdoc.api-docs.enabled=true
+spring.application.name=cart-server
+spring.config.import=configserver:http://localhost:9091
