--- a/order-payment-server/src/main/resources/application.properties
+++ b/order-payment-server/src/main/resources/application.properties
@@ -1,31 +1,2 @@
-spring.application.name=OrderPaymentServer
-server.port=9098
-
-# CORS Configuration
-spring.web.cors.allowed-origins=http://localhost:4200
-spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
-spring.web.cors.allowed-headers=*
-spring.web.cors.allow-credentials=true
-
-# Disable Eureka completely
-eureka.client.enabled=false
-
-# MySQL Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/megamart_orders?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true
-spring.datasource.username=root
-spring.datasource.password=730524
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-
-# Actuator
-management.endpoints.web.exposure.include=*
-
-# Logging Configuration
-logging.level.com.megamart.orderpaymentserver=DEBUG
-
-# OpenAPI/Swagger Configuration
-springdoc.api-docs.path=/v3/api-docs
-springdoc.swagger-ui.path=/swagger-ui.html
-springdoc.swagger-ui.enabled=true
+spring.application.name=order-payment-server
+spring.config.import=configserver:http://localhost:9091
