--- a/product-server/src/main/resources/application.properties
+++ b/product-server/src/main/resources/application.properties
@@ -1,34 +1,2 @@
-# Product Service Configuration
-spring.application.name=ProductServer
-server.port=9096
-
-# Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/megamart_product
-spring.datasource.username=root
-spring.datasource.password=730524
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-# JPA Configuration
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-spring.jpa.properties.hibernate.format_sql=true
-
-# CORS Configuration
-spring.web.cors.allowed-origins=http://localhost:4200
-spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
-spring.web.cors.allowed-headers=*
-spring.web.cors.allow-credentials=true
-
-# Eureka Client - Disabled for standalone mode
-eureka.client.enabled=false
-eureka.client.register-with-eureka=false
-eureka.client.fetch-registry=false
-
-#Swagger
-springdoc.api-docs.path=/api-docs
-springdoc.swagger-ui.path=/swagger-ui.html
-
-# Actuator
-management.endpoints.web.exposure.include=health,info
-management.endpoint.health.show-details=always
+spring.application.name=product-server
+spring.config.import=configserver:http://localhost:9091
